applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
/*!
 * <!--
 *     Copyright (C) 2023 Dynamic Solutions
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 * -->
 */

// TODO: remove line below
/* stylelint-disable no-descending-specificity */

@use 'sass:map';
@use 'src/bulma-overwrite/variables' as spacing;
@use 'src/atomic-design-system/00-token/t.spacing';
@use 'src/atomic-design-system/00-token/t.color' as colors;
@use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
@use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
@use 'src/atomic-design-system/00-token/t.font' as font;

$color-navbar-link: var(--color-grey--900);

@mixin o-navbar {
  // causes the element to establish a containing block for all descendants (used for fixed-position descendants)
  // https://www.w3.org/TR/css-transforms-1/#containing-block-for-all-descendants
  transform: translateX(0);

  padding-top: var(--spacing-4);

  @include breakpoint.media-breakpoint-large {
    padding-top: var(--spacing-5);
    padding-bottom: var(--spacing-4);
  }

  .container {
    align-items: center;
  }

  .navbar,
  .navbar-end,
  .navbar-menu,
  .navbar-start,
  .navbar-top {
    @include breakpoint.media-breakpoint-large {
      align-items: center;
      height: 100%;
    }
  }

  .navbar-menu {
    &.has-navbar-top {
      .navbar-end,
      .navbar-start{
        @include breakpoint.media-breakpoint-large {
          height: 50%;
        }
      }
      .navbar-top {
        @include breakpoint.media-breakpoint-large {
          height: calc(50% - var(--spacing-2));
        }
      }
    }
  }

  .navbar-item:not(.navbar-dropdown a.navbar-item):last-of-type {
    @include breakpoint.media-breakpoint-large {
      padding: var(--spacing-1) 0 var(--spacing-1) 0;
    }
  }

  .navbar-brand {
    padding-left: var(--spacing-4);
    align-items: center;
    @include breakpoint.media-breakpoint-large {
      padding-left: 0;
    }

    img {
      max-height: 66px;
    }

    .navbar-item {
      @extend .px-0;

      padding-top: 0;
      padding-bottom: 0;

      @include breakpoint.media-breakpoint-large {
        padding-top: var(--spacing-1);
        padding-bottom: var(--spacing-1);
      }

      &:hover {
        background-color: unset !important; // override Bulma complex selector
      }
    }
  }

  a.navbar-link,
  a.navbar-item {
    color: $color-navbar-link;
    font-weight: var(--font-weight-500);
  }

  .navbar-menu {
    padding-left: var(--spacing-4);
    padding-right: var(--spacing-4);
    padding-bottom: var(--spacing-4);

    flex-shrink: 1;

    @include breakpoint.media-breakpoint-large {
      flex-wrap: wrap;
      padding-bottom: 0;
    }

    .navbar-end,
    .navbar-start,
    .navbar-top {
      display: flex;
      flex-direction: column;
      gap: 0;

      @include breakpoint.media-breakpoint-large {
        flex-direction: row;
        align-items: baseline;
        gap: var(--spacing-6);
      }
    }

    .navbar-top {
      .navbar-item {
        font-size: var(--font-size-14);
        font-weight: var(--font-weight-500);
        line-height: var(--line-height-155);
      }

      @include breakpoint.media-breakpoint-large {
        flex-basis: 100%;
        display: flex;
        justify-content: flex-end;
        margin-bottom: var(--spacing-2);
      }
    }

    a.navbar-item:not(.navbar-dropdown a.navbar-item) {
      display: inline-block;
      @include breakpoint.media-breakpoint-large {
        @include link.a-animated-underline-link;

        padding: 0;

        &:hover {
          background-color: unset !important; // override Bulma complex selector
        }
      }
    }

    .navbar-item.has-dropdown {
      height: 100%;
      &:hover {
        .navbar-link {
          background-color: unset !important; // override Bulma complex selector
        }

        .navbar-dropdown {
          display: block;
        }
      }

      &.is-active {
        .navbar-dropdown {
          display: block;
        }
      }

      li {
        list-style: none;
      }

      .navbar-dropdown {
        display: block;

        @include breakpoint.media-breakpoint-large {
          display: none;
        }
      }

      .navbar-link {
        @extend .pr-3;

        display: flex;
        justify-content: space-between;
        align-items: center;

        &::after {
          position: static;
          margin-bottom: -3px;
          @extend .ml-3;
          @extend .mr-1;
        }

        @include breakpoint.media-breakpoint-large {
          padding-left: 0;
          padding-right: 0 !important; // overwrite above @extend .pr-3
        }
      }
    }

    .button {
      height: var(--spacing-5_2);
      @extend .mt-2;
      font-size: var(--font-size-14);
      font-weight: var(--font-weight-600);

      @include breakpoint.media-breakpoint-large {
        margin-top: 0 !important; // overwrite above @extend .mt-2
      }
    }
  }

  @include breakpoint.media-breakpoint-large {
    .navbar-mega-dropdown {
      background-color: var(--color-grey--100);
      border-radius: var(--border-radius-0);
      border: 0;
      box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16);
      padding: var(--spacing-5_2) 0;

      position: fixed;
      width: 100%;
      left: 0;
      top: calc(100% - var(--spacing-4));

      // make sure columns layout will be 5 columns of equal width
      .column {
        flex: 0 0 20%;
        width: 20%;
        overflow: hidden;
      }

      // reset navbar-item style
      .navbar-item {
        padding: 0;
        white-space: normal;
      }

      // links hover effect
      .navbar-item {
        display: inline-block;
        @include link.a-animated-underline-link;

        &:hover {
          background-color: unset;
        }
      }

      .text-column {
        display: flex;
        flex-direction: column;
        align-items: flex-start;

        .navbar-section {
          font-size: var(--font-size-16);
          font-weight: var(--font-weight-600);
          line-height: var(--line-height-150);
          color: var(--color-grey--500);
        }

        // distance between elements:
        .navbar-section + .navbar-section,
        .navbar-item + .navbar-item {
          margin-top: var(--spacing-4);
        }

        .navbar-section + .navbar-item {
          margin-top: var(--spacing-5);
        }

        .navbar-item + .navbar-section {
          margin-top: var(--spacing-6);
        }

      }

      .highlights-column {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;

        // distance between elements:
        .navbar-item + .navbar-item {
          margin-top: var(--spacing-4);
        }

        .navbar-item {
          font-size: var(--font-size-32);
          font-weight: var(--font-weight-500);
          line-height: var(--line-height-150);
          color: $color-navbar-link;
        }
      }

    }
  }
}

